kubernetes/tebukuro.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tebukuro
  labels:
    app: tebukuro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tebukuro
  template:
    metadata:
      labels:
        app: tebukuro
    spec:
      containers:
        - image: us.gcr.io/tebukuro-182304/tebukuro_backend:latest
          name: tebukuro
          ports:
            - containerPort: 3000
              name: tebukuro
