kubernetes/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: tebukuro
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http-server
    - name: https
      port: 443
      targetPort: https-server
  selector:
    app: tebukuro
