kubernetes/tebukuro-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tebukuro
  labels:
    app: tebukuro
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: tebukuro
