kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tebukuro-ingress
spec:
  tls:
  - secretName: tebukuro-api-shinosakarb-org-certificate
  backend:
    serviceName: tebukuro
    servicePort: 3000
